syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.df.grpc";
option java_outer_classname = "HelloWorldProto";

service Simple {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service Counter {
    rpc Count (CountRequest) returns (CountResponse);
}

message CountRequest {
    int64 num1 = 1;
    int64 num2 = 2;
}

message CountResponse {
    int64 result = 1;
}